cargo_check_final_rbac_13.log
warning: /app/crates/auth-platform/Cargo.toml: file `/app/crates/auth-platform/src/lib.rs` found to be present in multiple build targets:
  * `lib` target `auth_platform`
  * `integration-test` target `lib`
    Checking auth-extension v0.1.0 (/app/crates/auth-extension)
    Checking auth-protocols v0.1.0 (/app/crates/auth-protocols)
    Checking auth-audit v0.1.0 (/app/crates/auth-audit)
    Checking auth-api v0.1.0 (/app/crates/auth-api)
    Checking auth-sso-platform v0.1.0 (/app)
error[E0433]: failed to resolve: use of undeclared type `RoleService`
  --> src/bin/test_rbac.rs:33:24
   |
33 |     let role_service = RoleService::new(role_repo);
   |                        ^^^^^^^^^^^ use of undeclared type `RoleService`
   |
help: consider importing this struct
   |
 1 + use auth_core::services::role_service::RoleService;
   |

warning: unused import: `auth_core::services::authorization::AuthorizationService`
 --> src/bin/test_rbac.rs:1:5
  |
1 | use auth_core::services::authorization::AuthorizationService;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0433`.
warning: `auth-sso-platform` (bin "test_rbac") generated 1 warning
error: could not compile `auth-sso-platform` (bin "test_rbac") due to 1 previous error; 1 warning emitted
warning: build failed, waiting for other jobs to finish...
